--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
 <footer>
   <div class="social-icons">
-    <a href="https://facebook.com" target="_blank">Facebook</a>
-    <a href="https://twitter.com" target="_blank">Twitter</a>
-    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+      <i class="bi bi-linkedin"></i>
+    </a>
+    <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+      <i class="bi bi-instagram"></i>
+    </a>
   </div>
   <p>&copy; 2025 IA para Profs - Todos os direitos reservados.</p>
 </footer>
