--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,13 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+  >
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 </head>
-<body data-theme="light">
+<body>
 
   <!-- Header -->
   {% include header.html %}
