Configure base URL for GitHub Pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 <div id="posts">
   {% for post in site.posts limit:10 %}
     <article class="post">
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
       <small>{{ post.date | date: "%d/%m/%Y" }}</small>
       <p>{{ post.excerpt }}</p>
     </article>
@@ -20,7 +20,7 @@ layout: default
   const allPosts = [
     {% for post in site.posts %}
       {
-        url: "{{ post.url }}",
+        url: "{{ post.url | relative_url }}",
         title: "{{ post.title | escape }}",
         date: "{{ post.date | date: '%d/%m/%Y' }}",
         excerpt: "{{ post.excerpt | strip_newlines | escape }}"
