--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-body-tertiary shadow-sm site-header">
   <div class="container-fluid">
-    <a class="navbar-brand fw-semibold" href="{{ '/' | relative_url }}">IA para Profs</a>
+    <a class="navbar-brand fw-semibold brand-gradient-text" href="{{ '/' | relative_url }}">IA para Profs</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Alternar navegação">
